--- a/Eportafolio/Views/Shared/_Layout.cshtml
+++ b/Eportafolio/Views/Shared/_Layout.cshtml
@@ -22,7 +22,20 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                   
+
+                    @*Opciones para menu admin*@
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Opcion Para Admin", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    }
+
+
+
                 </ul>
+
+
+
                  @Html.Partial("_LoginPartial")
             </div>
         </div>
